export const snapshot = {};

snapshot[`url and htmlUrl update href 1`] = `2`;

snapshot[`url and htmlUrl update href 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      loader: [AsyncFunction: module],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      loader: [AsyncFunction: module],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      loader: [AsyncFunction: json],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".json",
      loader: undefined,
      page: undefined,
      removeExtension: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      loader: [AsyncFunction: text],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".js",
      loader: undefined,
      page: undefined,
      removeExtension: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      loader: undefined,
      page: undefined,
      removeExtension: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      loader: [AsyncFunction: text],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".yaml",
      loader: [AsyncFunction: yaml],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".yml",
      loader: [AsyncFunction: yaml],
      page: true,
      removeExtension: true,
    },
  ],
}
`;

snapshot[`url and htmlUrl update href 3`] = `
[
]
`;

snapshot[`url and htmlUrl update href 4`] = `
{
  content: '
    <!DOCTYPE html>
    <html lang="en">
        <head>
            <title>Default Filter</title>
        </head>
        <body>
            <a id="url" href="https://example.com/test/url/">Url</a>
            <a id="htmlUrl" href="https://example.com/test/htmlUrl/">htmlUrl</a>
            <template>
              <h1>Template content</h1>
            </template>
        </body>
    </html>
  ',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Default Filter",
    url: "/default-filter/",
  },
  dest: {
    ext: ".html",
    path: "/default-filter/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/default-filter",
  },
}
`;

snapshot[`url and htmlUrl update href 5`] = `
{
  content: '
    <!DOCTYPE html>
    <html lang="en">
        <head>
            <title>Renamed Filter</title>
        </head>
        <body>
            <a id="urlify" href="undefined">Urlify</a>
            undefined
        </body>
    </html>
  ',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Renamed Filter",
    url: "/renamed-filter/",
  },
  dest: {
    ext: ".html",
    path: "/renamed-filter/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/renamed-filter",
  },
}
`;

snapshot[`configure url and htmlUrl names 1`] = `2`;

snapshot[`configure url and htmlUrl names 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      loader: [AsyncFunction: module],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      loader: [AsyncFunction: module],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      loader: [AsyncFunction: json],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".json",
      loader: undefined,
      page: undefined,
      removeExtension: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      loader: [AsyncFunction: text],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".js",
      loader: undefined,
      page: undefined,
      removeExtension: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      loader: undefined,
      page: undefined,
      removeExtension: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      loader: [AsyncFunction: text],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".yaml",
      loader: [AsyncFunction: yaml],
      page: true,
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".yml",
      loader: [AsyncFunction: yaml],
      page: true,
      removeExtension: true,
    },
  ],
}
`;

snapshot[`configure url and htmlUrl names 3`] = `
[
]
`;

snapshot[`configure url and htmlUrl names 4`] = `
{
  content: '
    <!DOCTYPE html>
    <html lang="en">
        <head>
            <title>Default Filter</title>
        </head>
        <body>
            <a id="url" href="undefined">Url</a>
            undefined
            <template>
              <h1>Template content</h1>
            </template>
        </body>
    </html>
  ',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Default Filter",
    url: "/default-filter/",
  },
  dest: {
    ext: ".html",
    path: "/default-filter/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/default-filter",
  },
}
`;

snapshot[`configure url and htmlUrl names 5`] = `
{
  content: '
    <!DOCTYPE html>
    <html lang="en">
        <head>
            <title>Renamed Filter</title>
        </head>
        <body>
            <a id="urlify" href="https://example.com/urlify/">Urlify</a>
            <a id="htmlUrlify" href="https://example.com/htmlUrlify/">htmlUrlify</a>
        </body>
    </html>
  ',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Renamed Filter",
    url: "/renamed-filter/",
  },
  dest: {
    ext: ".html",
    path: "/renamed-filter/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/renamed-filter",
  },
}
`;
